--- a/emotionDetector.html
+++ b/emotionDetector.html
@@ -7,6 +7,11 @@
 <body>
 
 <script type="text/javascript">
+	
+	//***********************************************//
+	//******************EMOTION API******************//
+	//***********************************************//
+	
 	var max = 0;
 	var maxString;
     $(function() {
@@ -72,6 +77,13 @@
             alert("fail");
         });
     });
+
+	//***********************************************//
+	//******************MADLIB STUFF*****************//
+	//***********************************************//
+	
+	
+	
 </script>
 </body>
 </html>
