--- a/emotionDetector.html
+++ b/emotionDetector.html
@@ -82,7 +82,14 @@
 	//******************MADLIB STUFF*****************//
 	//***********************************************//
 	
-	
+	var angerLib = '';
+	var contemptLib = '';
+	var disgustLib = '';
+	var fearLib = '';
+	var happinessLib = '';
+	var neutralLib = '';
+	var sadnessLib = '';
+	var surpriseLib = '';
 	
 </script>
 </body>
