--- a/emotionDetector.html
+++ b/emotionDetector.html
@@ -12,7 +12,14 @@
 	//***********************************************//
 	
 	var max = 0;
-	var maxString;
+	var maxString = [];
+	var emotions = ['anger', 'contempt', 'disgust', 'fear', 'happiness', 'neutral', 'sadness', 'surprise'];
+	var emotionCount = [0, 0, 0, 0, 0, 0, 0, 0];
+	var faceCount;
+	var mostOccurringEmotionString;
+	var mostOccurringEmotionIndex;
+	var emotionCountMax = 0;
+		
     	$(function() {
         	$.ajax({
             		url: "https://api.projectoxford.ai/emotion/v1.0/recognize",
@@ -27,48 +34,72 @@
         		})
         		.done(function(data) {
         			console.log(data);
+				faceCount = data.length;
+				
+				for (var i = 0; i < faceCount; i++)
+					maxString.push(0);
         	
         			if (data[0]['scores']['anger'] > max){
         				max = data[0]['scores']['anger'];
-        				maxString = 'anger';
+        				maxString[i] = 'anger';
+					emotionCount[0]++;
         			}
         			alert(max);
         			if (data[0]['scores']['contempt'] > max){
         				max = data[0]['scores']['contempt'];
-        				maxString = 'contempt';
+        				maxString[i] = 'contempt';
+					emotionCount[1]++;
 				}
 				alert(max);
 				if (data[0]['scores']['disgust'] > max){
 					max = data[0]['scores']['disgust'];
-					maxString = 'disgust';
+					maxString[i] = 'disgust';
+					emotionCount[2]++;
 				}
 				alert(max);
 				if (data[0]['scores']['fear'] > max){
 					max = data[0]['scores']['fear'];
-					maxString = 'fear';
+					maxString[i] = 'fear';
+					emotionCount[3]++;
 				}
 				alert(max);
 				if (data[0]['scores']['happiness'] > max){
 					max = data[0]['scores']['happiness'];
-					maxString = 'happiness';
+					maxString[i] = 'happiness';
+					emotionCount[4]++;
 				}
 				alert(max);
 				if (data[0]['scores']['neutral'] > max){
 					max = data[0]['scores']['neutral'];
-					maxString = 'neutral';
+					maxString[i] = 'neutral';
+					emotionCount[5]++;
 				}
 				alert(max);
 				if (data[0]['scores']['sadness'] > max){
 					max = data[0]['scores']['sadness'];
-					maxString = 'sadness';
+					maxString[i] = 'sadness';
+					emotionCount[6]++;
 				}
-			    alert(max);
-			    if (data[0]['scores']['surprise'] > max){
+			    	alert(max);
+			    	if (data[0]['scores']['surprise'] > max){
 					max = data[0]['scores']['surprise'];
-					maxString = 'surprise';
+					maxString[i] = 'surprise';
+				    	emotionCount[7]++;
 				}
-			    alert(max);
-			    alert(maxString);
+			    	alert(max);
+			    	alert(maxString);
+				alert('There are '+faceCount+'faces in this picture.');
+			    	for (var i = 0; i < faceCount; i++){
+					alert('Face #'i+1' is 'maxString[i]);
+				}
+				for (var i = 0; i < 8; i++){
+					if (emotionCount[i] > emotionCountMax){
+						emotionCountMax = emotionCount[i];
+						mostOccurringEmotionIndex = i;
+					}
+				}
+				alert('The most occurring emotion is '+emotions[mostOccurringEmotionIndex]);
+
 			})
         		.fail(function(error) {
         		console.log(error.getAllResponseHeaders());
@@ -76,6 +107,8 @@
             		alert("fail");
         	});
     	});
+		
+	
 
 	//***********************************************//
 	//******************MADLIB STUFF*****************//
