--- a/emotionDetector.html
+++ b/emotionDetector.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>JSSample</title>
-	<link  rel="stylesheet" type="text/css" href="../styles/aesthetic-IDStyles.css" />
+	<!--<link  rel="stylesheet" type="text/css" href="../styles/aesthetic-IDStyles.css" />-->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
 	
 	<script type="text/javascript">
@@ -90,7 +90,7 @@
 			    	alert(maxString);
 				alert('There are '+faceCount+'faces in this picture.');
 			    	for (var i = 0; i < faceCount; i++){
-					alert('Face #'i+1' is 'maxString[i]);
+					alert('Face #'i' is 'maxString[i]);
 				}
 				for (var i = 0; i < 8; i++){
 					if (emotionCount[i] > emotionCountMax){
