--- a/emotionDetector.html
+++ b/emotionDetector.html
@@ -36,61 +36,62 @@
         			console.log(data);
 				faceCount = data.length;
 				
-				for (var i = 0; i < faceCount; i++)
+				for (var i = 0; i < faceCount; i++){
 					maxString.push(0);
         	
-        			if (data[0]['scores']['anger'] > max){
-        				max = data[0]['scores']['anger'];
-        				maxString[i] = 'anger';
-					emotionCount[0]++;
-        			}
-        			alert(max);
-        			if (data[0]['scores']['contempt'] > max){
-        				max = data[0]['scores']['contempt'];
-        				maxString[i] = 'contempt';
-					emotionCount[1]++;
-				}
-				alert(max);
-				if (data[0]['scores']['disgust'] > max){
-					max = data[0]['scores']['disgust'];
-					maxString[i] = 'disgust';
-					emotionCount[2]++;
-				}
-				alert(max);
-				if (data[0]['scores']['fear'] > max){
-					max = data[0]['scores']['fear'];
-					maxString[i] = 'fear';
-					emotionCount[3]++;
-				}
-				alert(max);
-				if (data[0]['scores']['happiness'] > max){
-					max = data[0]['scores']['happiness'];
-					maxString[i] = 'happiness';
-					emotionCount[4]++;
-				}
-				alert(max);
-				if (data[0]['scores']['neutral'] > max){
-					max = data[0]['scores']['neutral'];
-					maxString[i] = 'neutral';
-					emotionCount[5]++;
-				}
-				alert(max);
-				if (data[0]['scores']['sadness'] > max){
-					max = data[0]['scores']['sadness'];
-					maxString[i] = 'sadness';
-					emotionCount[6]++;
+					if (data[0]['scores']['anger'] > max){
+						max = data[0]['scores']['anger'];
+						maxString[i] = 'anger';
+						emotionCount[0]++;
+					}
+					alert(max);
+					if (data[0]['scores']['contempt'] > max){
+						max = data[0]['scores']['contempt'];
+						maxString[i] = 'contempt';
+						emotionCount[1]++;
+					}
+					alert(max);
+					if (data[0]['scores']['disgust'] > max){
+						max = data[0]['scores']['disgust'];
+						maxString[i] = 'disgust';
+						emotionCount[2]++;
+					}
+					alert(max);
+					if (data[0]['scores']['fear'] > max){
+						max = data[0]['scores']['fear'];
+						maxString[i] = 'fear';
+						emotionCount[3]++;
+					}
+					alert(max);
+					if (data[0]['scores']['happiness'] > max){
+						max = data[0]['scores']['happiness'];
+						maxString[i] = 'happiness';
+						emotionCount[4]++;
+					}
+					alert(max);
+					if (data[0]['scores']['neutral'] > max){
+						max = data[0]['scores']['neutral'];
+						maxString[i] = 'neutral';
+						emotionCount[5]++;
+					}
+					alert(max);
+					if (data[0]['scores']['sadness'] > max){
+						max = data[0]['scores']['sadness'];
+						maxString[i] = 'sadness';
+						emotionCount[6]++;
+					}
+					alert(max);
+					if (data[0]['scores']['surprise'] > max){
+						max = data[0]['scores']['surprise'];
+						maxString[i] = 'surprise';
+						emotionCount[7]++;
+					}
 				}
 			    	alert(max);
-			    	if (data[0]['scores']['surprise'] > max){
-					max = data[0]['scores']['surprise'];
-					maxString[i] = 'surprise';
-				    	emotionCount[7]++;
-				}
-			    	alert(max);
-			    	alert(maxString);
+			    	//alert(maxString);
 				alert('There are '+faceCount+'faces in this picture.');
 			    	for (var i = 0; i < faceCount; i++){
-					alert('Face #'i' is 'maxString[i]);
+					alert('Face #'i+1' is 'maxString[i]);
 				}
 				for (var i = 0; i < 8; i++){
 					if (emotionCount[i] > emotionCountMax){
