--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<script type="text/javascript">
 	function process(){
-		var projectoxford = document.link.newlink.value;
+		var projectOxford = document.link.newlink.value;
 	}
 		
 	//***********************************************//
