--- a/Aesthetic-ID-master/index.html
+++ b/Aesthetic-ID-master/index.html
@@ -34,7 +34,7 @@
             		},
             		type: "POST",
             		// Request body
-             		data: '{"url": "projectoxford"}',
+             		data: '{"url": projectoxford}',
         		})
         		.done(function(data) {
         			console.log(data);
